--- a/Tester/Tester.csproj
+++ b/Tester/Tester.csproj
@@ -39,6 +39,10 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="Test, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\Test\bin\Debug\Test.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Program.cs" />
@@ -52,10 +56,6 @@
       <Project>{f4997e6c-03a8-401b-ad71-4f43349f853f}</Project>
       <Name>Sinject.Runtime</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Test\Test.csproj">
-      <Project>{1fdbb79e-fd40-4377-bbb8-6014981e3625}</Project>
-      <Name>Test</Name>
-    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Content Include="patch.xml" />
@@ -65,10 +65,9 @@
     <PreBuildEvent>
     </PreBuildEvent>
   </PropertyGroup>
-
-  <UsingTask TaskName="Sinject.Patcher.PatchAssembliesTask" AssemblyFile="..\Sinject.Patcher\bin\Debug\Sinject.Patcher.exe"/>
+  <UsingTask TaskName="Sinject.Patcher.PatchAssembliesTask" AssemblyFile="..\Sinject.Patcher\bin\Debug\Sinject.Patcher.exe" />
   <Target Name="BeforeBuild">
-    <PatchAssembliesTask PatchFilePath="patch.xml"/>
+    <PatchAssembliesTask PatchFilePath="patch.xml" />
   </Target>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
